YARN-3345. Add non-exclusive node label API. Contributed by Wangda Tan (cherry picked from commit e1feb4ea1a532d680d6ca69b55ffcae1552d64f0)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -18,6 +18,8 @@ Release 2.7.1 - 2015-06-28
 
   NEW FEATURES
 
+    YARN-3345. Add non-exclusive node label API. (Wangda Tan via jianhe)
+
   IMPROVEMENTS
 
     YARN-3243. CapacityScheduler should pass headroom from parent to children
