--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -1,17 +1,5 @@
 Hadoop MapReduce Change Log
 
-Release 2.7.2 - UNRELEASED
-
-  INCOMPATIBLE CHANGES
-
-  NEW FEATURES
-
-  IMPROVEMENTS
-
-  OPTIMIZATIONS
-
-  BUG FIXES
-
 Release 2.7.1 - 2015-06-28
 
   INCOMPATIBLE CHANGES
@@ -21,6 +9,8 @@ Release 2.7.1 - 2015-06-28
   IMPROVEMENTS
 
   OPTIMIZATIONS
+    MAPREDUCE-6376. Add avro binary support for jhist files (Ray Chiang via
+    jlowe)
 
   BUG FIXES
 
