MAPREDUCE-6433. launchTime may be negative. Contributed by Zhihai Xu
(cherry picked from commit 93d50b782494af7eef980c4d596a59ff4e11646e)
(cherry picked from commit 9d40eead8154251eca513288c0de3dd7c1da81d7)

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -48,6 +48,8 @@ Release 2.7.1 - 2015-06-28
     MAPREDUCE-6410. Fixed MapReduce JobHistory server to use the right (login)
     UGI to refresh log and cleaner settings. (Varun Saxena via vinodkv)
 
+    MAPREDUCE-6433. launchTime may be negative. (Zhihai Xu)
+
 Release 2.7.0 - 2015-04-20
 
   INCOMPATIBLE CHANGES
