--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -6,6 +6,10 @@ Release 2.7.2 - UNRELEASED
 
   NEW FEATURES
 
+  YARN-3212. RMNode State Transition Update with DECOMMISSIONING state.
+    (Junping Du via wangda)
+
+
   IMPROVEMENTS
 
   OPTIMIZATIONS
