--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -57,6 +57,9 @@ Release 2.7.1 - 2015-06-28
 
     HDFS-8816. Improve visualization for the Datanode tab in the NN UI. (wheat9)
 
+    HDFS-9084. Pagination, sorting and filtering of files/directories in the 
+    HDFS Web UI (Ravi Prakash)
+
   OPTIMIZATIONS
     HDFS-8480. Fix performance and timeout issues in HDFS-7929 by using
     hard-links to preserve old edit logs, instead of copying them. (Zhe Zhang
