--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -60,6 +60,12 @@ Release 2.7.1 - 2015-06-28
     HDFS-9084. Pagination, sorting and filtering of files/directories in the 
     HDFS Web UI (Ravi Prakash)
 
+    HDFS-7796. Include X-editable for slick contenteditable fields in the web UI
+    (Ravi Prakash)
+
+    HDFS-7779. Improve the HDFS Web UI browser to allow chowning / chgrp and 
+    setting replication (Ravi Prakash)
+
   OPTIMIZATIONS
     HDFS-8480. Fix performance and timeout issues in HDFS-7929 by using
     hard-links to preserve old edit logs, instead of copying them. (Zhe Zhang
