--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -72,6 +72,9 @@ Release 2.7.1 - 2015-06-28
     Altiscale Proprietary feature for now. Please do not use (in case we drop
     support for this later). (Ravi Prakash)
 
+    HDFS-8678. Bring back the feature to view chunks of files in the HDFS file 
+    browser (Ravi Prakash)
+
   OPTIMIZATIONS
     HDFS-8480. Fix performance and timeout issues in HDFS-7929 by using
     hard-links to preserve old edit logs, instead of copying them. (Zhe Zhang
